# financial_analysis

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
data/processed/: log_prices.parquet  log_returns.parquet  prices.parquet
notebooks/: 01_data_check.ipynb  02_msd_single.ipynb  04_rolling_alpha.ipynb
notebooks/.ipynb_checkpoints/: 04_rolling_alpha-checkpoint.ipynb
scripts/.ipynb_checkpoints/: make_dataset-checkpoint.py
src/financial_physics/: config.py  preprocess.py
src/financial_physics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/financial_physics/metrics/.ipynb_checkpoints/: msd-checkpoint.py
